Definizione indice - Documento dei requisiti

--- a/docs/src/parts/documento_requisiti/documento_requisiti.tex
+++ b/docs/src/parts/documento_requisiti/documento_requisiti.tex
@@ -6,14 +6,10 @@
 % A copy of the license is included in the section entitled "GNU
 % Free Documentation License".
 
-\mainmatter
-\pagestyle{fancy}
+\part{Documento dei requisiti}\label{part:documento-dei-requisiti}
 
-\input{parts/documento_requisiti/documento_requisiti.tex}
+\input{parts/documento_requisiti/_sommario.tex}
 
-\backmatter
-\printbibliography[heading=bibintoc]
-\appendix
-\part*{Appendice}\label{part:appendice}
-\addcontentsline{toc}{part}{Appendice}
-\input{includes/license.tex}
+\input{parts/documento_requisiti/_generalita.tex}
+
+\input{parts/documento_requisiti/_requisiti.tex}
