--- a/docs/src/includes/license.tex
+++ b/docs/src/includes/license.tex
@@ -1,4 +1,4 @@
-\chapter*{GNU Free Documentation License}
+\chapter*{GNU Free Documentation License}\label{chap:gnu-free-documentation-license}
 \phantomsection  % so hyperref creates bookmarks
 \addcontentsline{toc}{chapter}{GNU Free Documentation License}
 % \label{label_fdl}
