--- a/docs/src/parts/documento_requisiti/_sommario.tex
+++ b/docs/src/parts/documento_requisiti/_sommario.tex
@@ -6,3 +6,5 @@
 % A copy of the license is included in the section entitled "GNU
 % Free Documentation License".
 
+\chapter*{Sommario}\label{chap:sommario}
+\addcontentsline{toc}{chapter}{Sommario}
