--- a/docs/src/parts/documento_requisiti/_generalita.tex
+++ b/docs/src/parts/documento_requisiti/_generalita.tex
@@ -8,7 +8,22 @@
 
 \chapter{Generalità}\label{chap:generalita}
 
+Il sistema ``Emotionally'' ha l'obiettivo di semplificare la \textit{sentiment
+analysis} agli analisti di tutti i campi. Il nome del sistema deriva dalla
+contrazione delle parole inglesi ``\textsc{emotional} ana\textsc{ly}sis''.
+
 \section{Il committente}\label{sec:il-committente}
+
+L'analisi delle emozioni è, a oggi, una componente importante per lo studio
+dell'impatto di prodotti e servizi sugli utenti finali. Avere a disposizione un
+\textit{tool} che ne permette la semi-automatizzazione è senz'altro di
+un'utilità indiscutibile.
+
+Il committente di questo progetto è il professor Giuseppe Desolda
+dell'Università degli Studi di Bari, che ha come obiettivo quello di realizzare
+un sistema in grado di analizzare le emozioni degli utenti analizzando dei
+video. La richiesta del committente è quella di utilizzare le API del sistema
+Affectiva, uno dei migliori tool di questa tipologia.
 
 \section{Situazione attuale}\label{sec:situazione-attuale}
 
