--- a/docs/src/Emotionally.tex
+++ b/docs/src/Emotionally.tex
@@ -7,16 +7,17 @@
 % Free Documentation License".
 
 \documentclass{fsc-document}
-\usepackage[english]{babel}
+\usepackage[english, italian]{babel}
 \usepackage[style=numeric, sorting=nty, backend=biber, citestyle=numeric, block=ragged]{biblatex}
 \usepackage{multirow}
 \usepackage{longtable}
 \graphicspath{{images/}}
+\usepackage{appendix}
 
 \input{includes/acronyms.tex}
 
 \title{Emotionally}
-\author{FSC - Five Students of Computer Science}
+\author{Alessandro Annese\\Davide De Salvo\\Andrea Esposito\\Graziano Montanaro\\Regina Zaccaria}
 \license{%
 \scriptsize Copyright \textcopyright{} 2019 FSC.
 \vskip15pt
@@ -27,8 +28,10 @@ with no Invariant Sections, no Front-Cover Texts, and no Back-Cover Texts.
 A copy of the license is included in the section entitled ``GNU
 Free Documentation License''.%
 }
-\course{Computer Science and Digital Communication}
+\course{Informatica e Comunicazione Digitale}
+\doctype{Università degli Studi di Bari ``Aldo Moro''}
 \date{\today}
+\version{0.1}
 
 \addbibresource{bibliography.bib}
 
