--- a/docs/src/parts/documento_requisiti/_sommario.tex
+++ b/docs/src/parts/documento_requisiti/_sommario.tex
@@ -8,3 +8,18 @@
 
 \chapter*{Sommario}\label{chap:sommario}
 \addcontentsline{toc}{chapter}{Sommario}
+
+Il presente documento riassume i requisiti del sistema ``Emotionally'' emersi in
+seguito ad analisi dei sistemi concorrenti e a brainstorming condotti dal team
+di sviluppo, validati con il committente.
+
+Il documento viene reso disponibile a tutti i possibili utilizzatori del
+sistema, con licenza GNU FDL, allo scopo di raccogliere ulteriori commenti e
+suggerimenti.
+
+Per ogni osservazione, si prega di contattare il referente del team per il
+presente progetto, Alessandro Annese.
+
+Il documento sarà costantemente aggiornato nel corso del progetto, per includere
+eventuali variazioni decise in corso d'opera. La versione corrente e la sua data
+di rilascio sono incluse in copertina e nella seconda di copertina.
