--- a/docs/src/parts/documento_requisiti/_generalita.tex
+++ b/docs/src/parts/documento_requisiti/_generalita.tex
@@ -27,9 +27,37 @@ Affectiva, uno dei migliori tool di questa tipologia.
 
 \section{Situazione attuale}\label{sec:situazione-attuale}
 
+Al momento non si ha una base su cui poter effettuare delle analisi. Per questo,
+seguendo il flusso di sviluppo scelto, si procederà all'analisi della concorrenza. 
+
 \section{Obiettivi generali del nuovo sito}\label{sec:obiettivi-generali-del-nuovo-sito}
+\subsection{Obiettivi generali}\label{subsec:obiettivi-generali}
+
+Ad oggi sono pochi i sistemi che permettono di esaminare le emozioni attraverso flussi
+di video raccogliendo le analisi in formato statistico. I dati raccolti possono essere 
+utili per analizzare campi applicativi più o meno vasti (ad esempio Marketing, Produzione
+Multimediale, Usabilità, Accessibilità \textit{etc...}). 
+
+\subsection{Obiettivi specifici}\label{subsec:obiettivi-specifici}
+
+Gli obiettivi che il team si è posto di raggiungere per la prima release del sistema sono:
+
+\begin{itemize}
+	\item L'analisi delle emozioni provate dai soggetti di un video
+	\item Riportare le analisi effettuate in forma più o meno dettagliata
+	\item Creare e gestire progetti con uno o più video
+	\item Permettere di aggregare i dati di due o più video di uno stesso progetto
+	\item Permettere la condivisione di un progetto con più utenti
+\end{itemize}
 
 \section{Gli utenti}\label{sec:gli-utenti}
+
+Gli Utenti utilizzatori della piattaforma si dividono principalmente in due categorie:
+
+\begin{itemize}
+	\item \texttt{Analista}
+	\item \texttt{Designer}
+\end{itemize}
 
 \section{Scenari d'uso}\label{sec:scenari-duso}
 
