Aggiunto grafico UML per utenti

--- a/docs/src/Emotionally.tex
+++ b/docs/src/Emotionally.tex
@@ -7,12 +7,14 @@
 % Free Documentation License".
 
 \documentclass{fsc-document}
-\usepackage[english, italian]{babel}
 \usepackage[style=numeric, sorting=nty, backend=biber, citestyle=numeric, block=ragged]{biblatex}
 \usepackage{multirow}
 \usepackage{longtable}
 \graphicspath{{images/}}
 \usepackage{appendix}
+\usepackage{tikz}
+\usepackage{tikz-uml}
+\tikzumlset{fill class=none}
 
 \input{includes/acronyms.tex}
 
@@ -31,7 +33,7 @@ Free Documentation License''.%
 \course{Informatica e Comunicazione Digitale}
 \doctype{Università degli Studi di Bari ``Aldo Moro''}
 \date{\today}
-\version{0.1}
+\version{0.0.1}
 
 \addbibresource{bibliography.bib}
 
