Definizione di alcuni stili e aggiunta di alcune tabelle

--- a/docs/src/Emotionally.tex
+++ b/docs/src/Emotionally.tex
@@ -14,9 +14,14 @@
 \usepackage{appendix}
 \usepackage{tikz}
 \usepackage{tikz-uml}
+\usepackage{multirow}
 \tikzumlset{fill class=none}
 
 \input{includes/acronyms.tex}
+
+\definecolor{emotionally-color}{HTML}{FF9800}
+\definecolor{secondary-color}{HTML}{FFC500}
+
 
 \title{Emotionally}
 \author{Alessandro Annese\\Davide De Salvo\\Andrea Esposito\\Graziano Montanaro\\Regina Zaccaria}
