--- a/docs/src/parts/documento_requisiti/_generalita.tex
+++ b/docs/src/parts/documento_requisiti/_generalita.tex
@@ -9,7 +9,7 @@
 \chapter{Generalità}\label{chap:generalita}
 
 Il sistema ``Emotionally'' ha l'obiettivo di semplificare la \textit{sentiment
-analysis} agli analisti di tutti i campi. Il nome del sistema deriva dalla
+	analysis} agli analisti di tutti i campi. Il nome del sistema deriva dalla
 contrazione delle parole inglesi ``\textsc{emotional} ana\textsc{ly}sis''.
 
 \section{Il committente}\label{sec:il-committente}
@@ -19,7 +19,7 @@ dell'impatto di prodotti e servizi sugli utenti finali. Avere a disposizione un
 \textit{tool} che ne permette la semi-automatizzazione è senz'altro di
 un'utilità indiscutibile.
 
-Il committente di questo progetto è il professor Giuseppe Desolda
+Il committente di questo progetto è il Professor Giuseppe Desolda
 dell'Università degli Studi di Bari, che ha come obiettivo quello di realizzare
 un sistema in grado di analizzare le emozioni degli utenti analizzando dei
 video. La richiesta del committente è quella di utilizzare le API del sistema
@@ -29,49 +29,89 @@ Affectiva, uno dei migliori tool di questa tipologia.
 
 Al momento non si ha una base su cui poter effettuare delle analisi. Per questo,
 seguendo il flusso di sviluppo scelto, si procederà all'analisi della
-concorrenza. 
+concorrenza.
 
 \section{Obiettivi generali del nuovo sito}\label{sec:obiettivi-generali-del-nuovo-sito}
 \subsection{Obiettivi generali}\label{subsec:obiettivi-generali}
 
 Ad oggi sono pochi i sistemi che permettono di esaminare le emozioni attraverso
 flussi di video raccogliendo le analisi in formato statistico. I dati raccolti
-possono essere utili per analizzare campi applicativi più o meno vasti (ad
-esempio Marketing, Produzione Multimediale, Usabilità, Accessibilità
-\textit{etc...}). 
+possono essere utili in vari campi applicativi (ad esempio Marketing, Produzione
+Multimediale, Usabilità, Accessibilità \textit{etc...}), in misura più o meno
+vasta.
 
 \subsection{Obiettivi specifici}\label{subsec:obiettivi-specifici}
 
-Gli obiettivi che il team si è posto di raggiungere per la prima release del
-sistema sono:
+Gli obiettivi che il team si è posto di raggiungere per la prima
+\textit{release} del sistema sono:
 
 \begin{itemize}
 	\item L'analisi delle emozioni provate dai soggetti di un video
 	\item Riportare le analisi effettuate in forma più o meno dettagliata
 	\item Creare e gestire progetti con uno o più video
 	\item Permettere di aggregare i dati di due o più video di uno stesso
-	progetto
+	      progetto
 	\item Permettere la condivisione di un progetto con più utenti
 \end{itemize}
 
 \section{Gli utenti}\label{sec:gli-utenti}
 
 Gli Utenti utilizzatori della piattaforma si dividono principalmente in due
-categorie: \texttt{Analista} e \texttt{Designer}. Le relazioni che intercorrono
+categorie: \textbf{Analista} e \textbf{Designer}. Le relazioni che intercorrono
 fra le due categorie, sono rappresentate in \autoref{fig:tipi-utente}.
 
+\begin{table}[H]
+	\centering
+	\caption{I bisogni degli utenti di Emotionally.}
+	\label{tab:bisogni-utenti}
+	\rowcolors{2}{gray!25}{white!0}
+	\begin{longtable}{@{}|>{\centering\arraybackslash}m{.25\textwidth}|m{.5\textwidth}|>{\centering\arraybackslash}m{.1\textwidth}|@{}}
+		\hline
+		\rowcolor{emotionally-color}
+		{\color{white} \textbf{Categoria di utente}}   & {\color{white} \textbf{Bisogni principali in relazione al sito}}     & {\color{white} \textbf{Priorità}} \\\hline
+		\endfirsthead
+		\cellcolor{white!0}                            & Analizzare video o gruppi di video                                   & Alta                              \\
+		\cellcolor{white!0}                            & Visualizzare dei report delle analisi effettuate                     & Alta                              \\
+		\cellcolor{white!0}                            & Esportare i report delle analisi effettuate                          & Media                             \\
+		\cellcolor{white!0}                            & Condividere i progetti creati con altri utenti                       & Media                             \\
+		\multirow{-5}{*}{Analista}                     & Analizzare dei video registrati in tempo reale                       & Alta                              \\
+		\cellcolor{gray!25}                            & Visualizzare i report di analisi effettuate da altri utenti          & Alta                              \\
+		\multirow{-2}{*}{\cellcolor{gray!25} Designer} & Visualizzazione dei dati in formati strutturati e formali (es. JSON) & Alta                              \\
+		\hline
+	\end{longtable}
+\end{table}
+\begin{table}[H]
+	\centering
+	\caption{Gli obiettivi del commitente legati agli utenti di Emotionally.}
+	\label{tab:obiettivi-committente-utenti}
+	\rowcolors{2}{gray!25}{white!0}
+	\begin{longtable}{@{}|>{\centering\arraybackslash}m{.25\textwidth}|m{.5\textwidth}|>{\centering\arraybackslash}m{.1\textwidth}|@{}}
+		\hline
+		\rowcolor{emotionally-color}
+		{\color{white} \textbf{Categoria di utente}} & {\color{white} \textbf{Obiettivi del commitente}} & {\color{white} \textbf{Priorità}} \\\hline
+		\endfirsthead
+		\cellcolor{white!0}                          & Analizzare video o gruppi di video                & Alta                              \\
+		\cellcolor{white!0}                          & Visualizzare dei report delle analisi effettuate  & Alta                              \\
+		\cellcolor{white!0}                          & Esportare i report delle analisi effettuate       & Media                             \\
+		\cellcolor{white!0}                          & Condividere i progetti creati con altri utenti    & Media                             \\
+		\multirow{-5}{*}{Analista}                   & Analizzare dei video registrati in tempo reale    & Alta                              \\
+		Designer                                     &                                                   &                                   \\
+		\hline
+	\end{longtable}
+\end{table}
 \begin{figure}[H]
 	\centering
 	\begin{tikzpicture}[node distance=2cm]
 		\umlsimpleclass[type=abstract, x=0, y=0]{Utente}
-		\umlsimpleclass[x=-3, y=-3]{Analista}
-		\umlsimpleclass[x=3, y=-3]{Designer}
+		\umlsimpleclass[x=-1.5, y=-2]{Analista}
+		\umlsimpleclass[x=1.5, y=-2]{Designer}
 		\umlinherit[geometry=|-|]{Analista}{Utente}
 		\umlinherit[geometry=|-|]{Designer}{Utente}
 	\end{tikzpicture}
 	\caption{Relazione tra le tipologie di utente di Emotionally}
 	\label{fig:tipi-utente}
 \end{figure}
+
 
 \section{Scenari d'uso}\label{sec:scenari-duso}
 
