Update section "Generalità"
Introdotta sottosezione "Scenari d'uso" e "Posizionamento competitivo"

--- a/docs/src/parts/documento_requisiti/_generalita.tex
+++ b/docs/src/parts/documento_requisiti/_generalita.tex
@@ -114,5 +114,24 @@ fra le due categorie, sono rappresentate in \autoref{fig:tipi-utente}.
 
 
 \section{Scenari d'uso}\label{sec:scenari-duso}
+Dei possibili scenari d'uso possono essere:
+\begin{itemize}
+	\item Un analista utilizza questo sistema per poter effettuare un'analisi 
+	delle emozioni degli utenti che visualizzano una pubblicità, un sito web o 
+	quant'altro e ricavare dei risultati da utilizzare per poter capire ciò che 
+	piace all'utente, quali emozioni hanno provato, quale riscontro ha 
+	l'elemento in analisi nei confronti dell'utente e così via.
+	\item Un designer utilizza questo sistema per poter accedere ai report 
+	precedentemente generati (solitamente da un analista) e scaricarne i 
+	risultati in vari formati compatibili con strumenti di design e 
+	programmazione per poterli utilizzare nei propri progetti.
+\end{itemize}
 
 \section{Posizionamento competitivo}\label{sec:posizionamento-competitivo}
+
+Il posizionamento competitivo di Emotionally è di offrire una piattaforma Open 
+Source tentando di contrastare il ``monopolio'' di tool a pagamento offrendo 
+una piattaforma utilizzabile gratuitamente. Uno dei bonus rispetto ai 
+competitor è la natura web del sistema che non richiede alcun tipo di 
+settaggio. Inoltre, si sfruttano le API di Affectiva, uno dei migliori 
+\textit{engine} di \textit{sentiment analysis}.
