Update section "Generalità"

--- a/docs/src/parts/documento_requisiti/_generalita.tex
+++ b/docs/src/parts/documento_requisiti/_generalita.tex
@@ -99,6 +99,7 @@ fra le due categorie, sono rappresentate in \autoref{fig:tipi-utente}.
 		\hline
 	\end{longtable}
 \end{table}
+% TODO: Insert objects of the designer
 \begin{figure}[H]
 	\centering
 	\begin{tikzpicture}[node distance=2cm]
