--- a/docs/src/parts/documento_requisiti/_generalita.tex
+++ b/docs/src/parts/documento_requisiti/_generalita.tex
@@ -95,7 +95,7 @@ fra le due categorie, sono rappresentate in \autoref{fig:tipi-utente}.
 		\cellcolor{white!0}                          & Esportare i report delle analisi effettuate       & Media                             \\
 		\cellcolor{white!0}                          & Condividere i progetti creati con altri utenti    & Media                             \\
 		\multirow{-5}{*}{Analista}                   & Analizzare dei video registrati in tempo reale    & Alta                              \\
-		% TODO: Insert goals of the designer
+		% @todo Insert goals of the designer
 		Designer                                     &                                                   &                                   \\
 		\hline
 	\end{longtable}
