Insert section "Modello dei dati" and "Sicurezza e privacy"

--- a/docs/src/parts/documento_requisiti/_requisiti.tex
+++ b/docs/src/parts/documento_requisiti/_requisiti.tex
@@ -120,6 +120,10 @@ offre ai suoi utenti.
 
 \subsection{Rappresentazione tabellare}
 
+\subsection{Modello dei dati}
+
+\subsection{Sicurezza e privacy}
+
 \section{Requisiti di contenuto}\label{sec:requisiti-di-contenuto}
 
 \section{Requisiti di gestione}\label{sec:requisiti-di-gestione}
