Update  requirements document (WIP)

--- a/docs/src/parts/documento_requisiti/_requisiti.tex
+++ b/docs/src/parts/documento_requisiti/_requisiti.tex
@@ -119,13 +119,366 @@ offre ai suoi utenti.
 \end{tikzpicture}
 
 \subsection{Rappresentazione tabellare}
+% TODO: Complete use case scenarios
+\begin{table}[H]
+	\centering
+	\caption{Use Case: Test analysis}
+	\label{tab:use-case-test-analysis}
+	\rowcolors{2}{gray!25}{white!0}
+	\begin{longtable}{@{}|>{\centering\arraybackslash}m{.25\textwidth}|m{.5\textwidth}|>{\centering\arraybackslash}m{.1\textwidth}|@{}}
+		
+		Nome caso d'uso & Registration \\
+		Descrizione & \\
+		Attori & \\
+		Pre-condizioni & \\
+		Sequenza delle azioni & \\
+		Post-condizioni & \\
+		Scenario alternativo & \\
+		
+	\end{longtable}
+\end{table}
+
+\begin{table}[H]
+	\centering
+	\caption{Use Case: Registration}
+	\label{tab:use-case-registration}
+	\rowcolors{2}{gray!25}{white!0}
+	\begin{longtable}{@{}|>{\centering\arraybackslash}m{.25\textwidth}|m{.5\textwidth}|>{\centering\arraybackslash}m{.1\textwidth}|@{}}
+		
+		Nome caso d'uso & Test analysis \\
+		Descrizione & \\
+		Attori & \\
+		Pre-condizioni & \\
+		Sequenza delle azioni & \\
+		Post-condizioni & \\
+		Scenario alternativo & \\
+		
+	\end{longtable}
+\end{table}
+
+\begin{table}[H]
+	\centering
+	\caption{Use Case: Login}
+	\label{tab:use-case-login}
+	\rowcolors{2}{gray!25}{white!0}
+	\begin{longtable}{@{}|>{\centering\arraybackslash}m{.25\textwidth}|m{.5\textwidth}|>{\centering\arraybackslash}m{.1\textwidth}|@{}}
+		
+		Nome caso d'uso & Login \\
+		Descrizione & \\
+		Attori & \\
+		Pre-condizioni & \\
+		Sequenza delle azioni & \\
+		Post-condizioni & \\
+		Scenario alternativo & \\
+		
+	\end{longtable}
+\end{table}
+
+\begin{table}[H]
+	\centering
+	\caption{Use Case: Logout}
+	\label{tab:use-case-logout}
+	\rowcolors{2}{gray!25}{white!0}
+	\begin{longtable}{@{}|>{\centering\arraybackslash}m{.25\textwidth}|m{.5\textwidth}|>{\centering\arraybackslash}m{.1\textwidth}|@{}}
+		
+		Nome caso d'uso & Logout \\
+		Descrizione & \\
+		Attori & \\
+		Pre-condizioni & \\
+		Sequenza delle azioni & \\
+		Post-condizioni & \\
+		Scenario alternativo & \\
+		
+	\end{longtable}
+\end{table}
+
+\begin{table}[H]
+	\centering
+	\caption{Use Case: Project creation}
+	\label{tab:use-case-project-creation}
+	\rowcolors{2}{gray!25}{white!0}
+	\begin{longtable}{@{}|>{\centering\arraybackslash}m{.25\textwidth}|m{.5\textwidth}|>{\centering\arraybackslash}m{.1\textwidth}|@{}}
+		
+		Nome caso d'uso & Project Creation \\
+		Descrizione & \\
+		Attori & \\
+		Pre-condizioni & \\
+		Sequenza delle azioni & \\
+		Post-condizioni & \\
+		Scenario alternativo & \\
+		
+	\end{longtable}
+\end{table}
+
+\begin{table}[H]
+	\centering
+	\caption{Use Case: Project view}
+	\label{tab:use-case-project-view}
+	\rowcolors{2}{gray!25}{white!0}
+	\begin{longtable}{@{}|>{\centering\arraybackslash}m{.25\textwidth}|m{.5\textwidth}|>{\centering\arraybackslash}m{.1\textwidth}|@{}}
+		
+		Nome caso d'uso & Project view \\
+		Descrizione & \\
+		Attori & \\
+		Pre-condizioni & \\
+		Sequenza delle azioni & \\
+		Post-condizioni & \\
+		Scenario alternativo & \\
+		
+	\end{longtable}
+\end{table}
+
+\begin{table}[H]
+	\centering
+	\caption{Use Case: Project editing}
+	\label{tab:use-case-project-editing}
+	\rowcolors{2}{gray!25}{white!0}
+	\begin{longtable}{@{}|>{\centering\arraybackslash}m{.25\textwidth}|m{.5\textwidth}|>{\centering\arraybackslash}m{.1\textwidth}|@{}}
+		
+		Nome caso d'uso & Project editing \\
+		Descrizione & \\
+		Attori & \\
+		Pre-condizioni & \\
+		Sequenza delle azioni & \\
+		Post-condizioni & \\
+		Scenario alternativo & \\
+		
+	\end{longtable}
+\end{table}
+
+\begin{table}[H]
+	\centering
+	\caption{Use Case: Project removal}
+	\label{tab:use-case-project-removal}
+	\rowcolors{2}{gray!25}{white!0}
+	\begin{longtable}{@{}|>{\centering\arraybackslash}m{.25\textwidth}|m{.5\textwidth}|>{\centering\arraybackslash}m{.1\textwidth}|@{}}
+		
+		Nome caso d'uso & Project removal \\
+		Descrizione & \\
+		Attori & \\
+		Pre-condizioni & \\
+		Sequenza delle azioni & \\
+		Post-condizioni & \\
+		Scenario alternativo & \\
+		
+	\end{longtable}
+\end{table}
+
+\begin{table}[H]
+	\centering
+	\caption{Use Case: Sharing project}
+	\label{tab:use-case-sharing-project}
+	\rowcolors{2}{gray!25}{white!0}
+	\begin{longtable}{@{}|>{\centering\arraybackslash}m{.25\textwidth}|m{.5\textwidth}|>{\centering\arraybackslash}m{.1\textwidth}|@{}}
+		
+		Nome caso d'uso & Sharing project \\
+		Descrizione & \\
+		Attori & \\
+		Pre-condizioni & \\
+		Sequenza delle azioni & \\
+		Post-condizioni & \\
+		Scenario alternativo & \\
+		
+	\end{longtable}
+\end{table}
+
+\begin{table}[H]
+	\centering
+	\caption{Use Case: Video upload}
+	\label{tab:use-case-video-upload}
+	\rowcolors{2}{gray!25}{white!0}
+	\begin{longtable}{@{}|>{\centering\arraybackslash}m{.25\textwidth}|m{.5\textwidth}|>{\centering\arraybackslash}m{.1\textwidth}|@{}}
+		
+		Nome caso d'uso & Video upload \\
+		Descrizione & \\
+		Attori & \\
+		Pre-condizioni & \\
+		Sequenza delle azioni & \\
+		Post-condizioni & \\
+		Scenario alternativo & \\
+		
+	\end{longtable}
+\end{table}
+
+\begin{table}[H]
+	\centering
+	\caption{Use Case: Video editing}
+	\label{tab:use-case-video-editing}
+	\rowcolors{2}{gray!25}{white!0}
+	\begin{longtable}{@{}|>{\centering\arraybackslash}m{.25\textwidth}|m{.5\textwidth}|>{\centering\arraybackslash}m{.1\textwidth}|@{}}
+		
+		Nome caso d'uso & Video editing \\
+		Descrizione & \\
+		Attori & \\
+		Pre-condizioni & \\
+		Sequenza delle azioni & \\
+		Post-condizioni & \\
+		Scenario alternativo & \\
+		
+	\end{longtable}
+\end{table}
+
+\begin{table}[H]
+	\centering
+	\caption{Use Case: Video removal}
+	\label{tab:use-case-video-removal}
+	\rowcolors{2}{gray!25}{white!0}
+	\begin{longtable}{@{}|>{\centering\arraybackslash}m{.25\textwidth}|m{.5\textwidth}|>{\centering\arraybackslash}m{.1\textwidth}|@{}}
+		
+		Nome caso d'uso & Registration \\
+		Descrizione & \\
+		Attori & \\
+		Pre-condizioni & \\
+		Sequenza delle azioni & \\
+		Post-condizioni & \\
+		Scenario alternativo & \\
+		
+	\end{longtable}
+\end{table}
+
+\begin{table}[H]
+	\centering
+	\caption{Use Case: Report view}
+	\label{tab:use-case-report-view}
+	\rowcolors{2}{gray!25}{white!0}
+	\begin{longtable}{@{}|>{\centering\arraybackslash}m{.25\textwidth}|m{.5\textwidth}|>{\centering\arraybackslash}m{.1\textwidth}|@{}}
+		
+		Nome caso d'uso & Report view \\
+		Descrizione & \\
+		Attori & \\
+		Pre-condizioni & \\
+		Sequenza delle azioni & \\
+		Post-condizioni & \\
+		Scenario alternativo & \\
+		
+	\end{longtable}
+\end{table}
+
+\begin{table}[H]
+	\centering
+	\caption{Use Case: Video report view}
+	\label{tab:use-case-video-report-view}
+	\rowcolors{2}{gray!25}{white!0}
+	\begin{longtable}{@{}|>{\centering\arraybackslash}m{.25\textwidth}|m{.5\textwidth}|>{\centering\arraybackslash}m{.1\textwidth}|@{}}
+		
+		Nome caso d'uso & Video report view \\
+		Descrizione & \\
+		Attori & \\
+		Pre-condizioni & \\
+		Sequenza delle azioni & \\
+		Post-condizioni & \\
+		Scenario alternativo & \\
+		
+	\end{longtable}
+\end{table}
+
+\begin{table}[H]
+	\centering
+	\caption{Use Case: Project report view}
+	\label{tab:use-case-project-report-view}
+	\rowcolors{2}{gray!25}{white!0}
+	\begin{longtable}{@{}|>{\centering\arraybackslash}m{.25\textwidth}|m{.5\textwidth}|>{\centering\arraybackslash}m{.1\textwidth}|@{}}
+		
+		Nome caso d'uso & Project report view \\
+		Descrizione & \\
+		Attori & \\
+		Pre-condizioni & \\
+		Sequenza delle azioni & \\
+		Post-condizioni & \\
+		Scenario alternativo & \\
+		
+	\end{longtable}
+\end{table}
+
+\begin{table}[H]
+	\centering
+	\caption{Use Case: Report download}
+	\label{tab:use-case-report-download}
+	\rowcolors{2}{gray!25}{white!0}
+	\begin{longtable}{@{}|>{\centering\arraybackslash}m{.25\textwidth}|m{.5\textwidth}|>{\centering\arraybackslash}m{.1\textwidth}|@{}}
+		
+		Nome caso d'uso & Report download \\
+		Descrizione & \\
+		Attori & \\
+		Pre-condizioni & \\
+		Sequenza delle azioni & \\
+		Post-condizioni & \\
+		Scenario alternativo & \\
+		
+	\end{longtable}
+\end{table}
+
+\begin{table}[H]
+	\centering
+	\caption{Use Case: User data update}
+	\label{tab:use-case-user-data-update}
+	\rowcolors{2}{gray!25}{white!0}
+	\begin{longtable}{@{}|>{\centering\arraybackslash}m{.25\textwidth}|m{.5\textwidth}|>{\centering\arraybackslash}m{.1\textwidth}|@{}}
+		Nome caso d'uso & User data update \\
+		Descrizione & \\
+		Attori & \\
+		Pre-condizioni & \\
+		Sequenza delle azioni & \\
+		Post-condizioni & \\
+		Scenario alternativo & \\
+
+	\end{longtable}
+\end{table}
+
+\begin{table}[H]
+	\centering
+	\caption{Use Case: Delete account}
+	\label{tab:use-case-delete-account}
+	\rowcolors{2}{gray!25}{white!0}
+	\begin{longtable}{@{}|>{\centering\arraybackslash}m{.25\textwidth}|m{.5\textwidth}}
+		Nome caso d'uso & Delete account \\
+		Descrizione & \\
+		Attori & \\
+		Pre-condizioni & \\
+		Sequenza delle azioni & \\
+		Post-condizioni & \\
+		Scenario alternativo & 
+	\end{longtable}
+\end{table}
 
 \subsection{Modello dei dati}
+% TODO: Insert Diagram E-R
 
 \subsection{Sicurezza e privacy}
+Per quanto riguarda i sistemi di sicurezza, la piattaforma web è suddivisa in 
+due macrosezioni: l'area pubblica (landing page) e l'area privata.
+
+Nella landing page, ogni visitatore può accedervi liberamente con lo scopo di 
+visionare quello che la web app offre prima di effettuare la registrazione. In 
+questa area pubblica, inoltre, è possibile effettuare dei test delle emozioni 
+senza, per quanto riguarda il team e la finalità di questo progetto, salvare 
+dati sensibili.
+
+Per quanto riguarda l'area privata, l'accesso è consentito solo attraverso il 
+login. Da qui l'utente loggato avrà a disposizione di tutti gli strumenti utili 
+per poter effettuare un'analisi. L'utente, inoltre, per poter accedere dovrà 
+quindi effettuare una prima fase di registrazione dove dovrà fornire dati 
+sensibili quali email, password, nome, cognome e sesso.
 
 \section{Requisiti di contenuto}\label{sec:requisiti-di-contenuto}
+% TODO: Complete table of contents
 
+\begin{table}[H]
+	\centering
+	\caption{I bisogni degli utenti di Emotionally.}
+	\label{tab:bisogni-utenti}
+	\rowcolors{2}{gray!25}{white!0}
+	\begin{longtable}{@{}|>{\centering\arraybackslash}m{.25\textwidth}|m{.25\textwidth}|m{.25\textwidth}|>{\centering\arraybackslash}m{.1\textwidth}|@{}}
+		\hline
+		\rowcolor{emotionally-color}
+		{\color{white} \textbf{Sezione}}   & {\color{white} 
+		\textbf{Sottosezione}}     & {\color{white} \textbf{Requisiti di 
+		contenuto}} & {\color{white} \textbf{Dove trovare le informazioni}} 
+		\\\hline
+		\endfirsthead
+		\hline
+	\end{longtable}
+\end{table}
 \section{Requisiti di gestione}\label{sec:requisiti-di-gestione}
 
 \section{Requisiti di accessibilità}\label{sec:requisiti-di-accessibilita}
